<resources>
    <string name="app_name">P19</string>
    <string name="log_in">Login</string>
    <string name="create_acc">Create Account</string>
    <string name="create_title">Create New project19 account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="finish">Finish</string>
    <string name="settings">Settings</string>
    <string name="swipe_users">Swipe Users</string>
    <string name="matched_users">Matches</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="mock_user">Mock Message Stream</string>
    <string name="report">Report</string>
    <string name="back">Back</string>
    <string name="report_user">Report user:</string>
    <string name="user_id">user_id</string>
    <string name="reason_for_report">Reason(s) for report:</string>
    <string name="description">Description:</string>
    <string name="bad_prof_pic">Inappropriate profile picture</string>
    <string name="abusive_lang">Abusive language</string>
    <string name="spam">Spam</string>
    <string name="fake_user">Fake user</string>
    <string name="desc">Description</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="title_fname">First name</string>
    <string name="title_email">Email</string>
    <string name="m_f">Male/Female</string>
    <string name="title_birth">Date of Birth</string>
    <string name="create_account">Create Account</string>
    <string name="title_gamertag">Gamertag</string>
    <string name="title_usertype">User Type:1/2</string>
    <string name="title_console">Console</string>
    <string name="title_view">View Accounts</string>
    <string name="title_create">Create Account</string>
    <string name="title_playpal">PlayPal</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>

    <string name="title_upload">Upload</string>
    <string name="cannotopencamera">Cannot Open Camera</string>
    <string name="title_camera">Upload using camera</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="choose_image">Choose Image</string>
    <string name="name">Name</string>
    <string name="date">Date of birth (dd/mm/yyyy)</string>
    <string name="more">More</string>
    <string name="previous">Previous</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_save">Save</string>
    <string name="permission_dialog">Please enable permissions to access external storage on the next screen by selecting Permissions > Storage</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_gender">Gender</string>
    <string name="title_age">Age</string>
    <string name="title_users">Users</string>
</resources>
