<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5A5A5A">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="2000dp">

        <TextView
            android:id="@+id/tvOtherUserAge"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="1355dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvOtherUserGamerTag3"
            android:layout_width="176dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="219dp"
            android:layout_marginBottom="1dp"
            android:text="@string/title_age"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOtherUserAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvOtherUserGT"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="100dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOtherUserGamerTag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvOtherUserGamerTag2"
            android:layout_width="176dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="219dp"
            android:text="@string/title_gamertag"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOtherUserGT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvOtherUserName"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="100dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOtherUserGamerTag2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvOtherUserGender"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="100dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOtherUserGamerTag3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvOtherUserGamerTag"
            android:layout_width="176dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="219dp"
            android:text="@string/title_gender"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOtherUserGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="115dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="280dp"
            android:layout_marginBottom="12dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tvOtherUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivOtherUserPICC"
            android:layout_width="218dp"
            android:layout_height="235dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toTopOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/otherUserPic" />

    </android.support.constraint.ConstraintLayout>
    </ScrollView>